Atualização das cores, ajustes menores nas páginas portfolio e  currículo

--- a/curriculo.html
+++ b/curriculo.html
@@ -102,11 +102,11 @@
   <section id="secao-curriculo" class="container mt-5">
     <div class="row">
       <!-- CARTÃO -->
-      <div class="col-lg-5 cartao">
+      <div class="col-lg-5 cartao" data-aos="fade-down" data-aos-once="true">
         <div class="cartao-apresentacao text-center py-5">
           <img class="img-perfil img-fluid" src="assets/img/euchico-perfil-curriculo.jpg" alt="Avatar euChico">
 
-          <h2 class="mt-3">Francisco de Paula</h2>
+          <h2 class="mt-3 mb-0">Francisco de Paula</h2>
           <h3>Programador Jr.</h3>
 
           <div class="social mt-4">     
@@ -173,7 +173,7 @@
           <h4 class="informacao-titulo">Experiências</h4>
 
           <!-- EXPERIÊNCIA 1 -->
-          <div class="info-collapse">
+          <div class="info-collapse mb-1">
             <a class="d-block h-100" href="#null" data-bs-toggle="collapse" data-bs-target="#collapse-1" aria-expanded="false" aria-controls="collapse-1" onclick="toggleArrow('arrow-1');">
               <div class="row no-gutters">
                 <div class="col-sm-3 d-none d-sm-block">
@@ -203,7 +203,7 @@
           <!-- / EXPERIÊNCIA 1 -->
 
           <!-- EXPERIÊNCIA 2 -->
-          <div id="collapse" class="info-collapse">
+          <div class="info-collapse mb-1">
             <a class="d-block h-100" href="#null" data-bs-toggle="collapse" data-bs-target="#collapse-2" aria-expanded="false" aria-controls="collapse-2" onclick="toggleArrow('arrow-2');">
               <div class="row no-gutters">
                 <div class="col-sm-3 d-none d-sm-block">
@@ -233,7 +233,7 @@
           <!-- / EXPERIÊNCIA 2 -->
 
           <!-- EXPERIÊNCIA 3 -->
-          <div id="collapse" class="info-collapse">
+          <div class="info-collapse mb-1">
             <a class="d-block h-100" href="#null" data-bs-toggle="collapse" data-bs-target="#collapse-3" aria-expanded="false" aria-controls="collapse-3" onclick="toggleArrow('arrow-3');">
               <div class="row no-gutters">
                 <div class="col-sm-3 d-none d-sm-block">
@@ -269,7 +269,7 @@
           <h4 class="informacao-titulo">Formação</h4>
 
           <!-- FORMAÇÃO 1 -->
-          <div id="collapse" class="info-collapse">
+          <div class="info-collapse mb-1">
             <a class="d-block h-100" href="#null" data-bs-toggle="collapse" data-bs-target="#collapse-4" aria-expanded="false" aria-controls="collapse-4" onclick="toggleArrow('arrow-4');">
               <div class="row no-gutters">
                 <div class="col-sm-3 d-none d-sm-block">
@@ -298,7 +298,7 @@
           <!-- / FORMAÇÃO 1 -->
 
           <!-- FORMAÇÃO 2 -->
-          <div id="collapse" class="info-collapse">
+          <div class="info-collapse mb-1">
             <a class="d-block h-100" href="#null" data-bs-toggle="collapse" data-bs-target="#collapse-5" aria-expanded="false" aria-controls="collapse-5" onclick="toggleArrow('arrow-5');">
               <div class="row no-gutters">
                 <div class="col-sm-3 d-none d-sm-block">
@@ -328,7 +328,7 @@
           <!-- / FORMAÇÃO 2 -->
 
           <!-- FORMAÇÃO 3 -->
-          <div id="collapse" class="info-collapse">
+          <div class="info-collapse mb-1">
             <a class="d-block h-100" href="#null" data-bs-toggle="collapse" data-bs-target="#collapse-6" aria-expanded="false" aria-controls="collapse-6" onclick="toggleArrow('arrow-6');">
               <div class="row no-gutters">
                 <div class="col-sm-3 d-none d-sm-block">
