--- a/portfolio.html
+++ b/portfolio.html
@@ -15,11 +15,11 @@
 
   <meta property="og:locale" content="pt_BR">
   <meta property="og:type" content="website">
-  <meta property="og:title" content="euChico - Francisco de Paula">
+  <meta property="og:title" content="euChico - Portfólio">
   <meta property="og:description" content="{ DESCRIÇÃO }">
-  <meta property="og:url" content="https://euchico.github.io">
+  <meta property="og:url" content="https://euchico.github.io/portfolio">
   <meta property="og:site_name" content="euChico">
-  <meta property="og:image" content="https://raw.githubusercontent.com/euchico/euchico.github.io/master/assets/img/euchico-perfil-principal.jpg">
+  <meta property="og:image" content="https://raw.githubusercontent.com/euchico/euchico.github.io/master/assets/img/euchico-perfil.jpg">
   <meta property="og:image:width" content="300">
   <meta property="og:image:height" content="300">
 
@@ -27,9 +27,9 @@
   <meta name="twitter:domain" content="euchico.github.io">
   <meta name="twitter:site" content="@euchicodev">
   <meta name="twitter:creator" content="@euchicodev">
-  <meta name="twitter:title" content="euChico - Francisco de Paula">
+  <meta name="twitter:title" content="euChico - Portfólio">
   <meta name="twitter:description" content="{ DESCRIÇÃO }">
-  <meta name="twitter:image" content="https://raw.githubusercontent.com/euchico/euchico.github.io/master/assets/img/euchico-perfil-principal.jpg">
+  <meta name="twitter:image" content="https://raw.githubusercontent.com/euchico/euchico.github.io/master/assets/img/euchico-perfil.jpg">
   <!-- / SEO -->
   <!-- / METAS -->
 
@@ -111,7 +111,7 @@
 
     <!-- Projeto Principal -->
     <div class="row">
-      <div class="col-md-12 portfolio-artigo">
+      <div class="col-md-12 portfolio-artigo" data-aos="fade-down" data-aos-once="true">
         <div class="row border rounded overflow-hidden mb-4 h-md-250 position-relative g-0">
           <div class="col-lg-8 d-flex flex-column p-4">
             <span class="d-inline-block mb-2 portfolio-categoria categoria-conteudo">conteúdo</span>
@@ -134,11 +134,11 @@
     
     <div class="row">
       <!-- Projeto 1 -->
-      <div class="col-md-6 portfolio-artigo">
+      <div class="col-md-6 portfolio-artigo" data-aos="fade-right" data-aos-once="true">
         <div class="row border rounded overflow-hidden mb-4 h-md-250 position-relative g-0">
           <div class="col d-flex flex-column p-4">
             <div>
-              <span class="d-inline-block mb-2 portfolio-categoria categoria-python">python</span>
+              <span class="d-inline-block mb-2 portfolio-categoria categoria-csharp">C#</span>
             </div>
             <h3 class="portfolio-titulo">Green</h3>
             <p class="card-text mb-auto portfolio-resumo">Projeto com objetivo realizar sorteios, análises estatísticas e levantamentos de loterias.</p>
@@ -155,7 +155,7 @@
       <!-- / Projeto 1 -->
 
       <!-- Projeto 2 -->
-      <div class="col-md-6 portfolio-artigo">
+      <div class="col-md-6 portfolio-artigo" data-aos="fade-left" data-aos-once="true">
         <div class="row border rounded overflow-hidden mb-4 h-md-250 position-relative g-0">
           <div class="col d-flex flex-column p-4">
             <div>
@@ -164,7 +164,7 @@
               <span class="d-inline-block mb-2 portfolio-categoria categoria-angular">angular</span>
             </div>
           <h3 class="portfolio-titulo">Aventura Solo</h3>
-          <p class="card-text mb-auto portfolio-resumo">Projeto como objetivo fornecer uma solução para jogadores e criadores de RPG.</p>
+          <p class="card-text mb-auto portfolio-resumo">Projeto como objetivo fornecer uma solução para jogadores e criadores de livros de RPG.</p>
           <a class="portfolio-link mt-2" href="https://github.com/euchico/projeto-aventura-solo" target="_blank"> <span>Veja Mais</span> <i class="fas fa-angle-right"></i></a>
           </div>
           
