Correção geral de texto.

--- a/portfolio.html
+++ b/portfolio.html
@@ -9,14 +9,14 @@
   <!-- SEO -->
   <meta http-equiv="content-language" content="pt-BR">
   <meta name="author" content="Francisco de Paula (euChico)">
-  <meta name="description" content="{ DESCRIÇÃO }">
+  <meta name="description" content="Projetos de estudo que abordam as tecnologias fundamentais para o meu trabalho diário, bem como a projetos pessoais.">
   <meta name="creator" content="Francisco de Paula (euChico)">
   <meta name="robots" content="index, follow">
 
   <meta property="og:locale" content="pt_BR">
   <meta property="og:type" content="website">
   <meta property="og:title" content="euChico - Portfólio">
-  <meta property="og:description" content="{ DESCRIÇÃO }">
+  <meta property="og:description" content="Projetos de estudo que abordam as tecnologias fundamentais para o meu trabalho diário, bem como a projetos pessoais.">
   <meta property="og:url" content="https://euchico.github.io/portfolio">
   <meta property="og:site_name" content="euChico">
   <meta property="og:image" content="https://raw.githubusercontent.com/euchico/euchico.github.io/master/assets/img/euchico-perfil.jpg">
@@ -24,11 +24,11 @@
   <meta property="og:image:height" content="300">
 
   <meta name="twitter:card" value="summary">
-  <meta name="twitter:domain" content="euchico.github.io">
+  <meta name="twitter:domain" content="euchico.github.io/portfolio">
   <meta name="twitter:site" content="@euchicodev">
   <meta name="twitter:creator" content="@euchicodev">
   <meta name="twitter:title" content="euChico - Portfólio">
-  <meta name="twitter:description" content="{ DESCRIÇÃO }">
+  <meta name="twitter:description" content="Projetos de estudo que abordam as tecnologias fundamentais para o meu trabalho diário, bem como a projetos pessoais.">
   <meta name="twitter:image" content="https://raw.githubusercontent.com/euchico/euchico.github.io/master/assets/img/euchico-perfil.jpg">
   <!-- / SEO -->
   <!-- / METAS -->
