--- a/sobre.html
+++ b/sobre.html
@@ -9,14 +9,14 @@
   <!-- SEO -->
   <meta http-equiv="content-language" content="pt-BR">
   <meta name="author" content="Francisco de Paula (euChico)">
-  <meta name="description" content="Francisco de Paula (euChico) compartilhando a sua jornada pessoal e profissional como um programador Jr., que percorreu um caminho não linear.">
+  <meta name="description" content="Francisco de Paula (euChico) compartilhando a sua jornada pessoal e profissional como um programador Jr., através de uma trajetória não linear.">
   <meta name="creator" content="Francisco de Paula (euChico)">
   <meta name="robots" content="index, follow">
 
   <meta property="og:locale" content="pt_BR">
   <meta property="og:type" content="website">
   <meta property="og:title" content="euChico - Sobre">
-  <meta property="og:description" content="Francisco de Paula (euChico) compartilhando a sua jornada pessoal e profissional como um programador Jr., que percorreu um caminho não linear.">
+  <meta property="og:description" content="Francisco de Paula (euChico) compartilhando a sua jornada pessoal e profissional como um programador Jr., através de uma trajetória não linear.">
   <meta property="og:url" content="https://euchico.github.io/sobre">
   <meta property="og:site_name" content="euChico">
   <meta property="og:image" content="https://raw.githubusercontent.com/euchico/euchico.github.io/master/assets/img/euchico-perfil.jpg">
@@ -28,7 +28,7 @@
   <meta name="twitter:site" content="@euchicodev">
   <meta name="twitter:creator" content="@euchicodev">
   <meta name="twitter:title" content="euChico - Sobre">
-  <meta name="twitter:description" content="Francisco de Paula (euChico) compartilhando a sua jornada pessoal e profissional como um programador Jr., que percorreu um caminho não linear.">
+  <meta name="twitter:description" content="Francisco de Paula (euChico) compartilhando a sua jornada pessoal e profissional como um programador Jr., através de uma trajetória não linear.">
   <meta name="twitter:image" content="https://raw.githubusercontent.com/euchico/euchico.github.io/master/assets/img/euchico-perfil.jpg">
   <!-- / SEO -->
   <!-- / METAS -->
@@ -115,9 +115,7 @@
     <p class="resumo">
       Meu nome é <a href="/curriculo" target="_self">Francisco de Paula</a>, tenho 33 anos e moro na Baixada Fluminense, no Rio de Janeiro.
       <br><br>
-      Minha trajetória acadêmica iniciou-se no curso de Ciência da Computação, porém enfrentei diversos obstáculos que me impediram de concluí-lo. Atualmente, estou dedicado ao curso de Análise e Desenvolvimento de Sistemas, ao mesmo tempo, em que cultivo um grande amor pela Matemática e pelas Artes. 
-      <br><br>
-      Ao longo da minha jornada, tenho percorrido diversos caminhos e vivido experiências variadas, o que me faz lembrar de uma frase inspiradora de Saint-Exupéry: “Quando a gente anda sempre em frente, não pode ir muito longe”. 
+      Minha posição atual é a de Programador Jr., com especialização em C#, ASP.NET e Angular, trabalhando como desenvolvedor Full Stack. Complemento minha formação por meio do curso de Análise e Desenvolvimento de Sistemas. Além disso, também estudo Licenciatura em Matemática, que acrescenta significativamente em várias áreas e fornece uma base crucial para o meu crescimento profissional.  
     </p>
   </section>
   <!-- / SEÇÃO: BIOGRAFIA -->
@@ -125,13 +123,17 @@
   <!-- SEÇÃO: ADS -->
   <div class="fundo-secao-ads d-none d-md-block py-5">
     <section id="secao-ads" class="container ">
-      <h3 class="text-center">Análise e Desenvolvimento de Sistemas</h3>
+      <h3 class="text-center">Caminhos</h3>
       <div class="separador-curto"></div>
 
       <p class="text-left w-75 mx-auto mb-5 secao-ads-resumo">
-        Desde a infância, tenho interesse por arte, tendo cogitado seguir na área do Desenho Industrial. Porém, escolhi cursar Ciência da Computação como primeira graduação, visto que sou aficionado por tecnologia e jogos. Embora tenha sido um curso excelente, alguns obstáculos surgiram e acabaram dificultando minha permanência na UERJ. Atualmente, estou cursando Licenciatura em Matemática no IFRJ, unindo as áreas humanas da Educação com a exatidão da Matemática, em uma nova faculdade e curso. 
+        Minha primeira graduação foi em Ciência da Computação, impulsionada pela minha grande paixão pela tecnologia. Embora o curso tenha sido excelente, alguns obstáculos surgiram e dificultaram minha permanência na UERJ. 
         <br><br>
-        Mesmo após ter deixado o curso de Ciência da Computação, nunca abandonei a programação e continuamente aplicava meus conhecimentos na vida acadêmica e cotidiana. Isso me inspirou a retornar aos estudos e, atualmente, estou cursando Análise e Desenvolvimento de Sistemas e recomeçando minha carreira como programador Jr. Este site foi criado para compartilhar minha “nova” trajetória de estudos e projetos desenvolvidos nesse processo.
+        Com o conhecimento adquirido, pude realizar trabalhos como freelancer, agarrando as oportunidades que surgiam, atuando tanto em Front End, Design e até mesmo Arte, uma atividade que mantenho desde a infância. Compreendendo a importância de estabelecer uma área de foco e buscando me tornar o especialista que almejo, decidi retornar ao Desenvolvimento, dando início a um recomeço na minha carreira.
+        <br><br>
+        Compreendendo cada momento da vida e buscando realizar meus sonhos, retorno à academia com muita dedicação, cursando Licenciatura em Matemática e Análise e Desenvolvimento de Sistemas. Além disso, mantenho o estudo pessoal constante e procuro crescer profissionalmente como Programador Júnior.
+        <br><br>
+        <span class="quote"> Ao refletir sobre minha jornada, uma frase inspiradora de Antonio Machado vem à mente: <i>“Caminhante, não há caminhos, se faz caminho ao caminhar”. </i></span>
       </p>
 
       <!-- PROJETOS -->
