Atualização de texto e remoção da página de projeto

--- a/curriculo.html
+++ b/curriculo.html
@@ -141,8 +141,8 @@
           <h4 class="informacao-titulo">Sobre Mim</h4>
 
           <p>
-            Meu objetivo é me tornar um desenvolvedor Full Stack para apoiar meu time com uma base sólida e, ao mesmo tempo, dar vida aos meus projetos pessoais. 
-            Apaixonado por Matemática, possuo uma visão abrangente de mundo, enriquecida pela licenciatura e pelo envolvimento com as artes.
+            Minha posição atual é a de Programador Jr., com especialização em C#, ASP.NET e Angular, trabalhando como Full Stack. 
+            Complemento minha formação por meio do curso de Análise e Desenvolvimento de Sistemas. 
           </p>
 
           <div class="separador-longo"></div>
