--- a/sobre.html
+++ b/sobre.html
@@ -115,7 +115,7 @@
     <p class="resumo">
       Meu nome é <a href="/curriculo" target="_self">Francisco de Paula</a>, tenho 33 anos e moro na Baixada Fluminense, no Rio de Janeiro.
       <br><br>
-      Minha posição atual é a de Programador Jr., com especialização em C#, ASP.NET e Angular, trabalhando como desenvolvedor Full Stack. Complemento minha formação por meio do curso de Análise e Desenvolvimento de Sistemas. Além disso, também estudo Licenciatura em Matemática, que acrescenta significativamente em várias áreas e fornece uma base crucial para o meu crescimento profissional.  
+      Minha posição atual é a de Programador Jr., com especialização em C#, ASP.NET e Angular, trabalhando como Full Stack. Complemento minha formação por meio do curso de Análise e Desenvolvimento de Sistemas. Além disso, também estudo Licenciatura em Matemática, que acrescenta significativamente em várias áreas e fornece uma base crucial para o meu crescimento profissional.  
     </p>
   </section>
   <!-- / SEÇÃO: BIOGRAFIA -->
