Atualização de código

--- a/curriculo.html
+++ b/curriculo.html
@@ -141,8 +141,8 @@
           <h4 class="informacao-titulo">Sobre Mim</h4>
 
           <p>
-            Minha posição atual é a de Programador Jr., com especialização em C#, ASP.NET e Angular, trabalhando como Full Stack. 
-            Complemento minha formação por meio do curso de Análise e Desenvolvimento de Sistemas. 
+            Minha posição atual é a de Programador Jr. trabalhando como Full Stack, com foco em C#, ASP.NET e Angular. 
+            Complemento minha formação por meio do curso de Análise e Desenvolvimento de Sistemas e estudos pessoais. 
           </p>
 
           <div class="separador-longo"></div>
@@ -193,9 +193,8 @@
 
             <div>
               <p id="collapse-1" class="collapse">
-                A melhor forma de aprender e de demonstrar conhecimentos é realizando projetos e colocar tudo em prática. 
-                Meus projetos vão além dos estudos e de apenas uma área do conhecimento, gosto de envolver Matemática, Design e até mesmo Marketing. 
-                Atualmente estou construindo o <strong><a href="https://matematicadasorte.com" target="_blank">“Matemática da Sorte”</a></strong>.
+                Acredito que a melhor forma de aprender e de demonstrar conhecimentos é aplicando na prática através de projetos. 
+                Meus principais projetos estão presentes na página de Portfólio ou com mais detalhes no meu GitHub.
               </p>
             </div>
           </div>
