Atualização do curriculo.

--- a/curriculo.html
+++ b/curriculo.html
@@ -194,7 +194,7 @@
             <div>
               <p id="collapse-1" class="collapse">
                 Acredito que a melhor forma de aprender e de demonstrar conhecimentos é aplicando na prática através de projetos. 
-                Meus principais projetos estão presentes na página de Portfólio ou com mais detalhes no meu GitHub.
+                Meus principais projetos estão presentes na página de <a href="portfolio" target="_self">Portfólio</a> ou com mais detalhes no meu <a href="http://github.com/euchico" target="_blank">GitHub</a>.
               </p>
             </div>
           </div>
@@ -211,7 +211,7 @@
                 <div class="col-10 col-sm-8">
                   <div class="d-inline-block collapse-area">
                     <span class="titulo">MXM Sistemas</span> <br>
-                    <span class="collapse-subtitle">Desenvolvimento Front-End</span>
+                    <span class="collapse-subtitle">Programador Jr.</span>
                   </div>
                 </div>
                 
@@ -223,8 +223,9 @@
 
             <div>
               <p id="collapse-2" class="collapse">
-                Minhas principais responsabilidades envolviam desenvolvimento front-end <em>(HTML, CSS e Javascript)</em>, criação de templates e manutenção de sites em Wordpress, criação de layout para sistemas web e criação/edição de imagens.
-                Além disso, participava diretamente das várias etapas de idealização e desenvolvimento dos projetos.
+                Atualmente, minha principal responsabilidade é a manutenção e realização de pequenas implementações em um sistema ERP, 
+                atuando como Full Stack (.NET e Angular). Além disso, executo correções direcionadas ao levantamento de relatórios em Delphi e 
+                análise de Banco de Dados (Oracle).
               </p>
             </div>
           </div>
@@ -241,7 +242,7 @@
                 <div class="col-10 col-sm-8">
                   <div class="d-inline-block collapse-area">
                     <span class="titulo">Agência Kindle</span> <br>
-                    <span class="collapse-subtitle">Iniciação Científica em Computação Gráfica</span>
+                    <span class="collapse-subtitle">Desenvolvedor Front-end (Junior)</span>
                   </div>
                 </div>
                 
@@ -253,8 +254,9 @@
 
             <div>
               <p id="collapse-3" class="collapse">
-                Pesquisa de iniciação científica focada na área de Visão Computacional e interpretação de dados obtidos por Sensoriamento Remoto.
-                Além da pesquisa dentro do tema proposto, o projeto realizado em C++ tinha com objetivo retomar o desenvolvimento e atualização o software InterIMAGE.
+                Minha atuação incluiu a codificação de e-mails marketing, o desenvolvimento de hotsites e a manutenção de portais em WordPress. 
+                Ao longo desse processo, tive a oportunidade de praticar a utilização de ferramentas de design, como Figma e Photoshop, 
+                e fortalecer meus conhecimentos em desenvolvimento Front-end, incluindo HTML, CSS e Javascript.
               </p>
             </div>
           </div>
