Atualização de textos do curriculo

--- a/curriculo.html
+++ b/curriculo.html
@@ -290,8 +290,8 @@
 
             <div>
               <p id="collapse-4" class="collapse">
-                Para estar realmente atualizado e evoluindo no Desenvolvimento Web, ou qualquer área de conhecimento, é fundamental a criação de projetos e realização estudos pessoais.
-                Minha trajetória de estudo fora das salas de aula será, sempre que possível, compartilhada no <strong><a href="https://github.com/euchico/webdev" target="_blank">GitHub</a></strong>.
+                Para estar verdadeiramente atualizado é fundamental realizar estudos complementares além da formação básica. Portanto, considero importante enfatizar essa seção. 
+                Atualmente, estou realizando estudos complementares por meio da Alura e compartilhando todo o processo no <a href="https://github.com/euchico/webdev" target="_blank">GitHub</a> e em outras redes. 
               </p>
             </div>
           </div>
@@ -320,8 +320,8 @@
 
             <div>
               <p id="collapse-5" class="collapse">
-                Curso fundamental para ampliar a minha visão de mundo unindo a área técnica da Matemática e o olhar humano da Educação.
-                São inúmeras as conexões entre da Ciência Computação e Licenciatura em Matemática, e meu desejo é conseguir compreendê-las e levar para minha prática profissional.
+                Este curso está me proporcionando a construção da base para o desenvolvimento de software, preenchendo as lacunas que ficaram na minha formação em Ciência da Computação. 
+                Além disso, está fortalecendo minha habilidade de buscar conhecimento de forma autônoma. 
               </p>
             </div>
           </div>
@@ -350,7 +350,8 @@
 
             <div>
               <p id="collapse-6" class="collapse">
-                Faculdade que me possibilitou obter os fundamentos dos diversos campos da Computação como a programação em vários paradigmas, desenvolvimento e análise de algoritmos, arquitetura e engenharia de software, entre outros conhecimentos importantíssimos para minha atuação hoje.
+                Este curso é essencial para ampliar minha visão de mundo, integrando a área técnica da Matemática com a perspectiva humana da Educação. 
+                Existem inúmeras ligações entre a Programação e a Licenciatura em Matemática, e meu desejo é compreendê-las e aplicá-las em minha prática profissional. 
               </p>
             </div>
           </div>
@@ -403,8 +404,8 @@
               <strong class="">Arte</strong>
               
               <p>
-                O desenho sempre fez parte da minha vida, em certos momentos de forma séria e outros por diversão. 
-                Com isso, posso falar que arte é algo fundamental para mim e gosto de compartilhar alguns estudos de desenhos no <strong><a href="https://www.instagram.com/euchicoart" target="_blank">Instagram</a></strong>.
+                O desenho sempre fez parte da minha vida, na maior parte do tempo como uma forma de diversão e, em uma pequena parcela, como minha profissão. 
+                Por isso, posso afirmar que a arte é um elemento fundamental na minha vida, e gosto de compartilhar no Instagram (<a href="https://www.instagram.com/euchicoart" target="_blank">@euchicoart</a> e <a href="https://www.instagram.com/euchicoart2" target="_blank">@euchicoart2</a>).
               </p>
             </div>
           </div>
